fix glossaries and reference in texstudio

--- a/Thesis/LaTeX/Methodology.tex
+++ b/Thesis/LaTeX/Methodology.tex
@@ -172,7 +172,7 @@ This scale allows users to express how much they agree with a given statement.\\
 To be able to answer the second main question, there is a need for an evaluation method that will list the general user importance for each quality attribute. Kano is a tool that can satisfy these desires. The Kano Model gives more insight into the fact that the performance of the quality attributes is not in a linear relationship with the corresponding customer satisfaction (\cite{KANO1984}). Kano offers the possibility to divide the quality attributes into five categories that each have different effects on customer satisfaction (Performance, Must-Be, Attractive, Reverse, Indifferent). This division is done on the basis of the answers obtained from the survey (questions with five-level rating scale).\\
 
 \begin{figure}[ht]
-	\includegraphics[scale=0.35]{Thesis/LaTeX/Figures/KANO.png}
+	\includegraphics[scale=0.35]{../LaTeX/Figures/KANO.png}
 	\caption{Five categories of quality attributes (\cite{KANO1984}).}
 	\label{fig:kano}
 \end{figure}
